--- a/pressurecompressor/pom.xml
+++ b/pressurecompressor/pom.xml
@@ -19,6 +19,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.pitest</groupId>
